Security: Remove hardcoded API keys from all files
- Updated create_podcast.py to use NEUPHONIC_API_KEY environment variable
- Updated create_podcast_notlongform.py to use environment variable
- Enhanced .env.example with more comprehensive configuration
- All files now require proper environment variable setup
- Added helpful error messages for missing API key configuration

This ensures no sensitive API keys are committed to the repository.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 # Neuphonic API Configuration
 # Copy this file to .env and add your actual API key
+# Get your API key from: https://console.neuphonic.com/
 NEUPHONIC_API_KEY=your_neuphonic_api_key_here
 
 # Optional: Set different sampling rates or other defaults
 # DEFAULT_SAMPLING_RATE=48000
 # DEFAULT_ENCODING=pcm_linear
+
+# Development settings
+# NODE_ENV=development
+# DEBUG=true
